--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,8 @@
+@import 'datatables.net-dt';
+
+@import 'datatables.net-responsive-dt';
+@import 'datatables.net-select-dt';
+
 // If you want to override variables do it here
 @import "variables";
 
@@ -13,3 +18,4 @@
 
 // If you want to add custom CSS you can put it here
 @import "custom";
+
